--- a/styles/style.css
+++ b/styles/style.css
@@ -9,7 +9,7 @@
 }
 
 :root {
-  --mainPink: #d90082;
+  --mainPink: #f20091;
   --mainWhite: #f7f7f7;
   --mainBlack: #0e1724;
   --mainGray: #bec0c2;
@@ -28,4 +28,62 @@
 body{
     color: var(--mainBlack);
     font-family: 'Roboto-Regular','sans-serif';
+}
+
+
+/*--- Header ---*/
+
+.header{
+  height: 500px;
+}
+
+/*--- Navbar ---*/
+
+.nav{
+  position: fixed;
+  box-shadow: 0 0 4px #4d525b14, 0 2px 4px #4d525b1f;
+}
+
+.nav .nav-content{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 15px 0;
+}
+
+.nav .nav-content a{
+  color: inherit;
+  text-decoration: none;
+  transition: all .2s;
+}
+
+.nav .nav-content a:hover{
+  color: var(--mainBlue);
+}
+
+.nav-menu , .nav-links{
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.nav-menu li , .nav-links li{
+  margin-right: 30px;
+}
+
+.nav-links .nav-links_item:nth-child(3) a{
+  background-color: var(--mainPink);
+  color: #fff;
+  font-weight: bold;
+  padding: 8px 15px;
+  border-radius: 3px;
+  font-size: 14px;
+}
+
+.nav-links .nav-links_item:nth-child(3) a:hover{
+  background-color: rgb(215, 2, 137);
+}
+
+.nav-logo img{
+  width: 130px;
 }
