--- a/styles/style.css
+++ b/styles/style.css
@@ -23,11 +23,13 @@
   margin: 0;
   box-sizing: border-box;
   list-style-type: none;
+  text-decoration: none;
 }
 
 body{
     color: var(--mainBlack);
     font-family: 'Roboto-Regular','sans-serif';
+    position: relative;
 }
 
 
@@ -35,12 +37,14 @@ body{
 
 .header{
   height: 500px;
+  position: relative;
 }
 
 /*--- Navbar ---*/
 
 .nav{
-  position: fixed;
+  position: sticky;
+  top: 0;
   box-shadow: 0 0 4px #4d525b14, 0 2px 4px #4d525b1f;
 }
 
@@ -53,7 +57,6 @@ body{
 
 .nav .nav-content a{
   color: inherit;
-  text-decoration: none;
   transition: all .2s;
 }
 
@@ -86,4 +89,28 @@ body{
 
 .nav-logo img{
   width: 130px;
+}
+
+/*--- Header Navbar ---*/
+
+.header-navbar{
+  background-color: var(--mainBlack);
+  overflow: auto;
+}
+
+.header-navbar_menu{
+  display: flex;
+}
+
+.header-navbar_menu .header-navbar_item{
+  padding:16px;
+}
+
+.header-navbar_menu .header-navbar_item:hover{
+  background-color: #323A45;
+}
+
+.header-navbar_menu .header-navbar_item a{
+  color: var(--mainWhite);
+  font-size: 14px;
 }
