--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -4,8 +4,14 @@
 }
 
 .container {
-  max-width: 1176px;
-  margin: 0 auto;
+  max-width: 1176px !important;
+  margin: 0 auto !important;
+}
+
+@media (max-width : 1234px){
+  .left-section_content{
+    padding-left: 25px;
+  }
 }
 
 @media (max-width: 960px) {
@@ -29,6 +35,18 @@
   }
   .product-info{
     font-size: 14px !important;
+  }
+  .information-title{
+    font-size: 16px;
+  }
+  
+  .information-desc{
+    font-size: 20px;
+  }
+  
+  .information-paragraph{
+    font-size: 11px;
+    line-height: 20px;
   }
 }
 
@@ -87,6 +105,14 @@
   }
   .description-card{
     width: auto;
+  }
+  .information{
+    flex-flow: column;
+    height: 120vh;
+  }
+  .left-section , .right-section{
+    width: 100%;
+    height: 50%;
   }
 }
 
