--- a/styles/style.css
+++ b/styles/style.css
@@ -53,7 +53,7 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 15px 0;
+  padding: 15px 0 15px 16px;
 }
 
 .nav .nav-content a {
@@ -413,4 +413,117 @@ body {
 .right-section_content{
   padding-left: 40px;
 }
+
+/*--- Footer ---*/
+
+.footer{
+  background-color: var(--mainBlack);
+}
+
+.footer-content{
+  display: flex;
+  justify-content: space-between;
+  padding: 40px 28px 0 28px;
+  flex-wrap: wrap;
+  border-bottom: .5px solid #bec0c233;
+}
+.footer-column{
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
+.footer__grouping{
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+.footer__grouping-title{
+  margin-bottom: 22px;
+  font-weight: 600;
+  color: var(--mainWhite);
+  font-size: 14px;
+}
+.m-left-14{
+  margin-left: 14px;
+}
+.footer__grouping-list{
+  padding-bottom: 20px;
+}
+.footer-link{
+  color: var(--mainWhite) !important;
+  margin-left: 10px;
+}
+.footer__grouping-list li{
+  margin-bottom: 10px;
+}
+.footer__grouping-list li , .footer__grouping-list a , .footer__grouping label , .copyright-desc a {
+  text-decoration: none;
+  color: var(--mainGray);
+  font-size: 14px;
+}
+
+.footer__grouping-list a:hover{
+  text-decoration: underline;
+  color: var(--mainWhite);
+}
+
+.footer__grouping-list li img{
+  width: 133px;
+  height: 32px;
+}
+
+.footer-icon{
+  color: var(--mainWhite);
+  font-size: 20px;
+}
+
+.social-media_menu{
+  display: flex;
+  justify-content: space-between;
+  padding-bottom: 40px;
+}
+
+.social-media_menu .social-media_item{
+  color: var(--mainWhite);
+  font-size: 20px;
+}
+
+.fa-facebook:hover{
+  color: #1877F2;
+}
+.fa-twitter:hover{
+  color: #00B6F1;
+}
+.fa-youtube:hover{
+  color: #FF0000;
+}
+.fa-instagram:hover{
+  color: #C32AA3;
+}
+
+.footer-copyright{
+  color: var(--mainWhite);
+  font-size: 13px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  padding: 25px 28px 35px 28px;
+}
+
+.copyright-reg{
+  margin-bottom: 10px;
+}
+
+.footer-copyright span{
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.copyright-desc{
+  width: 600px;
+  font-size: 11px;
+  line-height: 16px;
+}
+
+
 
