--- a/styles/login.css
+++ b/styles/login.css
@@ -24,7 +24,7 @@ body {
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   width: 400px;
-  margin: 20px 25px;
+  margin: 20px 20px;
 }
 
 h2 {
@@ -92,7 +92,7 @@ button {
   display: block;
   font-size: 20px;
   padding: 10px;
-  margin-top: 20px;
+  margin-top: 26px;
   width: 100%;
 }
 
@@ -103,4 +103,8 @@ a:link {
 
 a:visited {
   color: blue;
+}
+
+.form p{
+  font-size: 13px;
 }
