--- a/styles/signup.css
+++ b/styles/signup.css
@@ -24,7 +24,7 @@ body {
   border-radius: 5px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
   width: 400px;
-  margin: 20px 25px;
+  margin: 20px 20px;
 }
 
 h2 {
@@ -75,7 +75,7 @@ h2 {
 .form-control small {
   color: var(--error-color);
   position: absolute;
-  bottom: 0;
+  bottom: 0px;
   left: 0;
   visibility: hidden;
 }
@@ -104,4 +104,14 @@ a:link{
 
 a:visited{
 	color: blue;
+}
+
+.form p{
+  font-size: 13px;
+}
+
+@media (max-width:768px) {
+  .form{
+    padding: 30px 25px;
+  }
 }
